--- a/assets/index.html
+++ b/assets/index.html
@@ -10,12 +10,62 @@
 </head>
 <body>
    
+   <h3>Esercizio per Casa</h3>
    <div class="container">
       <div class="row">
-         <div class="col-1">
-            <div class="box">Container</div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
          </div>
       </div>  
+      <div class="row">
+         <div class="col-xs-2">
+            <div class="box">col</div>
+         </div>
+         <div class="col-xs-5">
+            <div class="box">col</div>
+         </div>
+         <div class="col-xs-5">
+            <div class="box">col</div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-xs-12">
+            <div class="box">12 col</div>
+         </div>
+      </div>
    </div>
 
 </body>
