--- a/assets/index.html
+++ b/assets/index.html
@@ -66,6 +66,59 @@
             <div class="box">12 col</div>
          </div>
       </div>
+      <div class="row">
+         <div class="col-xs-8">
+            <div class="box">8 col</div>
+         </div>
+         <div class="col-xs-2">
+            <div class="box">2 col</div>
+         </div>
+         <div class="col-xs-2">
+            <div class="box">2 col</div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+         <div class="col-xs-2">
+            <div class="box">2 col</div>
+         </div>
+         <div class="col-xs-2">
+            <div class="box">2 col</div>
+         </div>
+         <div class="col-xs-6">
+            <div class="box">6 col</div>
+         </div>
+         <div class="col-xs-1">
+            <div class="box">1 col</div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-xs-6">
+            <div class="row">
+               <div class="col-xs-2">
+                  <div class="box-green">Nested 2 col</div>
+               </div>
+               <div class="col-xs-2">
+                  <div class="box-green">Nested 2 col</div>
+               </div>
+               <div class="col-xs-8">
+                  <div class="box-green">Nested 8 col</div>
+               </div>
+            </div>
+         </div>
+         <div class="col-xs-6">
+            <div class="row">
+               <div class="col-xs-6">
+                  <div class="box-green">Nested 6 col</div>
+               </div>
+               <div class="col-xs-6">
+                  <div class="box-green">Nested 6 col</div>
+               </div>
+            </div>
+         </div>
+      </div>
    </div>
 
 </body>
