--- a/assets/index.html
+++ b/assets/index.html
@@ -96,27 +96,39 @@
       </div>
       <div class="row">
          <div class="col-xs-6">
-            <div class="row">
-               <div class="col-xs-2">
-                  <div class="box-green">Nested 2 col</div>
-               </div>
-               <div class="col-xs-2">
-                  <div class="box-green">Nested 2 col</div>
-               </div>
-               <div class="col-xs-8">
-                  <div class="box-green">Nested 8 col</div>
+            <div class="box">
+               <div class="row">
+                  <div class="col-xs-3">
+                     <div class="box-green">Nested 3 col</div>
+                  </div>
+                  <div class="col-xs-3">
+                     <div class="box-green">Nested 3 col</div>
+                  </div>
+                  <div class="col-xs-6">
+                     <div class="box-green">Nested 6 col</div>
+                  </div>
                </div>
             </div>
          </div>
          <div class="col-xs-6">
-            <div class="row">
-               <div class="col-xs-6">
-                  <div class="box-green">Nested 6 col</div>
-               </div>
-               <div class="col-xs-6">
-                  <div class="box-green">Nested 6 col</div>
+            <div class="box">
+               <div class="row">
+                  <div class="col-xs-6">
+                     <div class="box-green">Nested 6 col</div>
+                  </div>
+                  <div class="col-xs-6">
+                     <div class="box-green">Nested 6 col</div>
+                  </div>
                </div>
             </div>
+         </div>
+      </div>
+
+      <div class="separatore"></div>
+
+      <div class="row">
+         <div class="col-xs-12">
+            <div class="box"> </div>
          </div>
       </div>
    </div>
