--- a/assets/index.html
+++ b/assets/index.html
@@ -131,7 +131,128 @@
             <div class="box"> </div>
          </div>
       </div>
+      <div class="row">
+         <div class="col-xs-1">
+            <div class="box"> </div>
+         </div>
+         <div class="col-xs-11">
+            <div class="box"> </div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-xs-2">
+            <div class="box"> </div>
+         </div>
+         <div class="col-xs-10">
+            <div class="box"> </div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-xs-3">
+            <div class="box"> </div>
+         </div>
+         <div class="col-xs-9">
+            <div class="box"> </div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-xs-4">
+            <div class="box"> </div>
+         </div>
+         <div class="col-xs-8">
+            <div class="box"> </div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-xs-5">
+            <div class="box"> </div>
+         </div>
+         <div class="col-xs-7">
+            <div class="box"> </div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-xs-6">
+            <div class="box"> </div>
+         </div>
+         <div class="col-xs-6">
+            <div class="box"> </div>
+         </div>
+      </div>
+
+      <div class="separatore"></div>
    </div>
+
+   <h3>Offset</h3>
+   <div class="container">
+      <div class="row">
+         <div class="col-offset-xs-11"></div>
+         <div class="col-xs-1">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-10"></div>
+         <div class="col-xs-2">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-9"></div>
+         <div class="col-xs-3">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-8"></div>
+         <div class="col-xs-4">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-7"></div>
+         <div class="col-xs-5">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-6"></div>
+         <div class="col-xs-6">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-5"></div>
+         <div class="col-xs-7">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-4"></div>
+         <div class="col-xs-8">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-3"></div>
+         <div class="col-xs-9">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-2"></div>
+         <div class="col-xs-10">
+            <div class="box"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-offset-xs-1"></div>
+         <div class="col-xs-11">
+            <div class="box"></div>
+         </div>
+      </div>
+   </div>
+
 
 </body>
 </html>
