extrasmall media quert

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,89 +13,89 @@
    <h3>Esercizio per Casa</h3>
    <div class="container">
       <div class="row">
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
       </div>  
       <div class="row">
-         <div class="col-xs-2">
+         <div class="col-xs-2 col-sm-12">
             <div class="box">col</div>
          </div>
-         <div class="col-xs-5">
+         <div class="col-xs-5 col-sm-12">
             <div class="box">col</div>
          </div>
-         <div class="col-xs-5">
+         <div class="col-xs-5 col-sm-12">
             <div class="box">col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-12">
+         <div class="col-xs-12 col-sm-12">
             <div class="box">12 col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-8">
+         <div class="col-xs-8 col-sm-12">
             <div class="box">8 col</div>
          </div>
-         <div class="col-xs-2">
+         <div class="col-xs-2 col-sm-12">
             <div class="box">2 col</div>
          </div>
-         <div class="col-xs-2">
+         <div class="col-xs-2 col-sm-12">
             <div class="box">2 col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-2">
+         <div class="col-xs-2 col-sm-12">
             <div class="box">2 col</div>
          </div>
-         <div class="col-xs-2">
+         <div class="col-xs-2 col-sm-12">
             <div class="box">2 col</div>
          </div>
-         <div class="col-xs-6">
+         <div class="col-xs-6 col-sm-12">
             <div class="box">6 col</div>
          </div>
-         <div class="col-xs-1">
+         <div class="col-xs-1 col-sm-12">
             <div class="box">1 col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-6">
+         <div class="col-xs-6 col-sm-12">
             <div class="box">
                <div class="row">
                   <div class="col-xs-3">
@@ -110,7 +110,7 @@
                </div>
             </div>
          </div>
-         <div class="col-xs-6">
+         <div class="col-xs-6 col-sm-12">
             <div class="box">
                <div class="row">
                   <div class="col-xs-6">
