--- a/assets/index.html
+++ b/assets/index.html
@@ -13,110 +13,110 @@
    <h3>Esercizio per Casa</h3>
    <div class="container">
       <div class="row">
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
             <div class="box">1 col</div>
          </div>
       </div>  
       <div class="row">
-         <div class="col-xs-2 col-sm-12">
+         <div class="col-lg-2 col-sm-12 col-md-4 col-xs-2">
             <div class="box">col</div>
          </div>
-         <div class="col-xs-5 col-sm-12">
+         <div class="col-lg-5 col-sm-12 col-md-6 col-xs-8">
             <div class="box">col</div>
          </div>
-         <div class="col-xs-5 col-sm-12">
+         <div class="col-lg-5 col-sm-12 col-md-2 col-xs-2">
             <div class="box">col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-12 col-sm-12">
+         <div class="col-lg-12 col-sm-12 col-md-6 col-xs-12">
             <div class="box">12 col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-8 col-sm-12">
+         <div class="col-lg-8 col-sm-12 col-md-2 col-xs-4">
             <div class="box">8 col</div>
          </div>
-         <div class="col-xs-2 col-sm-12">
+         <div class="col-lg-2 col-sm-12 col-md-2 col-xs-6">
             <div class="box">2 col</div>
          </div>
-         <div class="col-xs-2 col-sm-12">
+         <div class="col-lg-2 col-sm-12 col-md-8 col-xs-2">
             <div class="box">2 col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-2 col-xs-2">
             <div class="box">1 col</div>
          </div>
-         <div class="col-xs-2 col-sm-12">
+         <div class="col-lg-2 col-sm-12 col-xs-2">
             <div class="box">2 col</div>
          </div>
-         <div class="col-xs-2 col-sm-12">
+         <div class="col-lg-2 col-sm-12 col-xs-2">
             <div class="box">2 col</div>
          </div>
-         <div class="col-xs-6 col-sm-12">
+         <div class="col-lg-6 col-sm-12 col-md-2 col-xs-2">
             <div class="box">6 col</div>
          </div>
-         <div class="col-xs-1 col-sm-12">
+         <div class="col-lg-1 col-sm-12 col-md-4 col-xs-4">
             <div class="box">1 col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-6 col-sm-12">
+         <div class="col-lg-6 col-sm-12 col-xs-12">
             <div class="box">
                <div class="row">
-                  <div class="col-xs-3">
+                  <div class="col-lg-3 col-xs-3">
                      <div class="box-green">Nested 3 col</div>
                   </div>
-                  <div class="col-xs-3">
+                  <div class="col-lg-3 col-xs-6">
                      <div class="box-green">Nested 3 col</div>
                   </div>
-                  <div class="col-xs-6">
+                  <div class="col-lg-6 col-xs-3">
                      <div class="box-green">Nested 6 col</div>
                   </div>
                </div>
             </div>
          </div>
-         <div class="col-xs-6 col-sm-12">
+         <div class="col-lg-6 col-sm-12 col-xs-12">
             <div class="box">
                <div class="row">
-                  <div class="col-xs-6">
+                  <div class="col-lg-6 col-xs-6">
                      <div class="box-green">Nested 6 col</div>
                   </div>
-                  <div class="col-xs-6">
+                  <div class="col-lg-6 col-xs-6">
                      <div class="box-green">Nested 6 col</div>
                   </div>
                </div>
@@ -127,55 +127,55 @@
       <div class="separatore"></div>
 
       <div class="row">
-         <div class="col-xs-12">
+         <div class="col-12">
             <div class="box"> </div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-1">
+         <div class="col-1">
             <div class="box"> </div>
          </div>
-         <div class="col-xs-11">
-            <div class="box"> </div>
-         </div>
-      </div>
-      <div class="row">
-         <div class="col-xs-2">
-            <div class="box"> </div>
-         </div>
-         <div class="col-xs-10">
+         <div class="col-11">
             <div class="box"> </div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-3">
+         <div class="col-2">
             <div class="box"> </div>
          </div>
-         <div class="col-xs-9">
-            <div class="box"> </div>
-         </div>
-      </div>
-      <div class="row">
-         <div class="col-xs-4">
-            <div class="box"> </div>
-         </div>
-         <div class="col-xs-8">
+         <div class="col-10">
             <div class="box"> </div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-5">
+         <div class="col-3">
             <div class="box"> </div>
          </div>
-         <div class="col-xs-7">
+         <div class="col-9">
             <div class="box"> </div>
          </div>
       </div>
       <div class="row">
-         <div class="col-xs-6">
+         <div class="col-4">
             <div class="box"> </div>
          </div>
-         <div class="col-xs-6">
+         <div class="col-8">
+            <div class="box"> </div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-5">
+            <div class="box"> </div>
+         </div>
+         <div class="col-7">
+            <div class="box"> </div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-6">
+            <div class="box"> </div>
+         </div>
+         <div class="col-6">
             <div class="box"> </div>
          </div>
       </div>
@@ -186,68 +186,68 @@
    <h3>Offset</h3>
    <div class="container">
       <div class="row">
-         <div class="col-offset-xs-11"></div>
-         <div class="col-xs-1">
+         <div class="col-offset-11"></div>
+         <div class="col-1">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-10"></div>
-         <div class="col-xs-2">
+         <div class="col-offset-10"></div>
+         <div class="col-2">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-9"></div>
-         <div class="col-xs-3">
+         <div class="col-offset-9"></div>
+         <div class="col-3">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-8"></div>
-         <div class="col-xs-4">
+         <div class="col-offset-8"></div>
+         <div class="col-4">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-7"></div>
-         <div class="col-xs-5">
+         <div class="col-offset-7"></div>
+         <div class="col-5">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-6"></div>
-         <div class="col-xs-6">
+         <div class="col-offset-6"></div>
+         <div class="col-6">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-5"></div>
-         <div class="col-xs-7">
+         <div class="col-offset-5"></div>
+         <div class="col-7">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-4"></div>
-         <div class="col-xs-8">
+         <div class="col-offset-4"></div>
+         <div class="col-8">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-3"></div>
-         <div class="col-xs-9">
+         <div class="col-offset-3"></div>
+         <div class="col-9">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-2"></div>
-         <div class="col-xs-10">
+         <div class="col-offset-2"></div>
+         <div class="col-10">
             <div class="box"></div>
          </div>
       </div>
       <div class="row">
-         <div class="col-offset-xs-1"></div>
-         <div class="col-xs-11">
+         <div class="col-offset-1"></div>
+         <div class="col-11">
             <div class="box"></div>
          </div>
       </div>
