--- a/index.html
+++ b/index.html
@@ -13,110 +13,110 @@
    <h3>Esercizio per Casa</h3>
    <div class="container">
       <div class="row">
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-6 col-xs-3">
+         <div class="col-lg-1 col-xs-12 col-md-6 col-sm-3">
             <div class="box">1 col</div>
          </div>
       </div>  
       <div class="row">
-         <div class="col-lg-2 col-sm-12 col-md-4 col-xs-2">
+         <div class="col-lg-2 col-xs-12 col-md-4 col-sm-2">
             <div class="box">col</div>
          </div>
-         <div class="col-lg-5 col-sm-12 col-md-6 col-xs-8">
+         <div class="col-lg-5 col-xs-12 col-md-6 col-sm-8">
             <div class="box">col</div>
          </div>
-         <div class="col-lg-5 col-sm-12 col-md-2 col-xs-2">
+         <div class="col-lg-5 col-xs-12 col-md-2 col-sm-2">
             <div class="box">col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-lg-12 col-sm-12 col-md-6 col-xs-12">
+         <div class="col-lg-12 col-xs-12 col-md-6 col-sm-12">
             <div class="box">12 col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-lg-8 col-sm-12 col-md-2 col-xs-4">
+         <div class="col-lg-8 col-xs-12 col-md-2 col-sm-4">
             <div class="box">8 col</div>
          </div>
-         <div class="col-lg-2 col-sm-12 col-md-2 col-xs-6">
+         <div class="col-lg-2 col-xs-12 col-md-2 col-sm-6">
             <div class="box">2 col</div>
          </div>
-         <div class="col-lg-2 col-sm-12 col-md-8 col-xs-2">
+         <div class="col-lg-2 col-xs-12 col-md-8 col-sm-2">
             <div class="box">2 col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-lg-1 col-sm-12 col-md-2 col-xs-2">
+         <div class="col-lg-1 col-xs-12 col-md-2 col-sm-2">
             <div class="box">1 col</div>
          </div>
-         <div class="col-lg-2 col-sm-12 col-xs-2">
+         <div class="col-lg-2 col-xs-12 col-sm-2">
             <div class="box">2 col</div>
          </div>
-         <div class="col-lg-2 col-sm-12 col-xs-2">
+         <div class="col-lg-2 col-xs-12 col-sm-2">
             <div class="box">2 col</div>
          </div>
-         <div class="col-lg-6 col-sm-12 col-md-2 col-xs-2">
+         <div class="col-lg-6 col-xs-12 col-md-2 col-sm-2">
             <div class="box">6 col</div>
          </div>
-         <div class="col-lg-1 col-sm-12 col-md-4 col-xs-4">
+         <div class="col-lg-1 col-xs-12 col-md-4 col-sm-4">
             <div class="box">1 col</div>
          </div>
       </div>
       <div class="row">
-         <div class="col-lg-6 col-sm-12 col-xs-12">
+         <div class="col-lg-6 col-xs-12 col-sm-12">
             <div class="box">
                <div class="row">
-                  <div class="col-lg-3 col-xs-3">
+                  <div class="col-lg-3 col-sm-3">
                      <div class="box-green">Nested 3 col</div>
                   </div>
-                  <div class="col-lg-3 col-xs-6">
+                  <div class="col-lg-3 col-sm-6">
                      <div class="box-green">Nested 3 col</div>
                   </div>
-                  <div class="col-lg-6 col-xs-3">
+                  <div class="col-lg-6 col-sm-3">
                      <div class="box-green">Nested 6 col</div>
                   </div>
                </div>
             </div>
          </div>
-         <div class="col-lg-6 col-sm-12 col-xs-12">
+         <div class="col-lg-6 col-xs-12 col-sm-12">
             <div class="box">
                <div class="row">
-                  <div class="col-lg-6 col-xs-6">
+                  <div class="col-lg-6 col-sm-6">
                      <div class="box-green">Nested 6 col</div>
                   </div>
-                  <div class="col-lg-6 col-xs-6">
+                  <div class="col-lg-6 col-sm-6">
                      <div class="box-green">Nested 6 col</div>
                   </div>
                </div>
